# goit-pythonweb-hw-06

./: alembic.ini  cli.py  connect.py  models.py  my_select.py  pyproject.toml  seed.py  select_test.py
alembic/: env.py
alembic/versions/: c0470c28ac3f_initial_migration.py
