[tool.poetry]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "Homework assignment Nr. 6 for the Fullstack Web Development with Python course"
authors = ["Lada <lada11lada@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
